# mshell

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  suppression.txt
inc/: errors.h  minishell.h
libft/: Makefile
libft/inc/: libft.h
libft/src/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_free.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  (+7 more)
src/: alloc.c  alloc_utils.c  clean.c  env_utils.c  errors.c  init.c  init_env.c  init_shell.c  init_wd.c  lexer.c  lst_utils.c  main.c  parse_utils.c  token.c  token_utils.c  utils.c
src/archived/: main.c
src/builtins/: cd.c  dispatch.c  echo.c  env.c  exit.c  export.c  pwd.c  unset.c  utils.c
src/execution/: builtin.c  execute.c  pipeline.c  setup.c  setup_access.c  teardown.c  utils.c
src/helper/: alloc.c  alloc_helper.c  alloc_utils.c  clean.c  cmd_utils.c  env_helper.c  env_utils.c  error.c  expander_utils.c  init.c  parser_utils.c  signal.c  token_utils.c
src/parsing/: cmd_parser.c  cmd_redir.c  expander.c  expander_cases.c  expander_quotes.c  heredoc.c  quote_removal.c  token.c  (+1 more)
